@@ -292,6 +292,28 @@ class EncoderTestCase(unittest.TestCase):
 
         pyamf.unregister_class(Foo)
 
+    def test_custom_type(self):
+        def write_as_list(list_interface_obj):
+            list_interface_obj.ran = True
+
+            return list(list_interface_obj)
+
+        class ListWrapper(object):
+            ran = False
+
+            def __iter__(self):
+                return iter([1, 2, 3])
+
+        pyamf.add_type(ListWrapper, write_as_list)
+        x = ListWrapper()
+
+        self.encoder.writeElement(x)
+        self.assertEquals(x.ran, True)
+
+        self.assertEquals(self.buf.getvalue(), '\n\x00\x00\x00\x03\x00?\xf0'
+            '\x00\x00\x00\x00\x00\x00\x00@\x00\x00\x00\x00\x00\x00\x00\x00@'
+            '\x08\x00\x00\x00\x00\x00\x00')
+
 class DecoderTestCase(unittest.TestCase):
     """
     Tests the output from the AMF0 L{Decoder<pyamf.amf0.Decoder>} class.
